# dotloot2

./: .gitignore  .pdm-python  Makefile  README.md  config.py  constants.py  dotloot.py  exceptions.py  out.txt  pyproject.toml  test.py
clients/: poeninja.py
filters/: cleo.yaml  example.yaml  march_affliction.yaml  march_ancestors.yaml  march_archnem.yaml  march_crucible.yaml  march_forbidden_sanctum.yaml  march_gssf_affliction.yaml  march_necropolis.yaml  march_phrecia.yaml  march_ruthless.yaml  march_secrets.yaml  march_sentinel.yaml  march_settlers.yaml  poe2.yaml
utils/: filter_writer.py  items.py  sounds.py  yaml_parser.py
utils/leveling/: generator.py  item_progression.py  lvling_constants.py
