[tool.poetry]
name = "dotloot"
version = "0.1.0"
description = "Loot filter generator written in Python"
authors = ["march"]
license = "Whichever GPL is the most annoying one."

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
