[tool.poetry]
name = "dotloot"
version = "0.1.0"
description = "Loot filter generator written in Python"
authors = ["march"]
license = "Whichever GPL is the most annoying one."

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]


[tool.pdm.dev-dependencies]
dev = []
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
authors = [
    {name = "march"},
]
license = {text = "Whichever GPL is the most annoying one."}
requires-python = "<4.0,>=3.8"
dependencies = [
    "requests<3.0.0,>=2.26.0",
    "pyyaml>=6.0.2",
    "ruff>=0.11.13",
]
name = "dotloot"
version = "0.1.0"
description = "Loot filter generator written in Python"
